--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -16,11 +16,11 @@
     <meta property="og:title" content="SparkSwipe - Discover Your Next Big Idea" />
     <meta property="og:description" content="Swipe through innovative startup ideas and discover your next big opportunity. Join thousands of entrepreneurs on SparkSwipe." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Eo_circle_green_letter-s.svg/1024px-Eo_circle_green_letter-s.svg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@sparkswipe" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Eo_circle_green_letter-s.svg/1024px-Eo_circle_green_letter-s.svg.png" />
   </head>
 
   <body>
